--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Importando estilos e fontawesome -->
   <link rel="stylesheet" href="./src/styles/global.css">
   <link rel="stylesheet" href="./src/styles/index.css">
-  <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css">
+  <script src="https://kit.fontawesome.com/89b2ef1546.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
